chore: Adiciona Liquibase para versionamento dos scripts de banco de dados
- Deixa de utilizar modelo de dados gerado pelo Hibernate.

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -40,6 +40,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.27.0</version>
+        </dependency>
     </dependencies>
 
 </project>
