--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.servlet.context-path = /api
 
+spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
+
 spring.datasource.url = jdbc:postgresql://database-pagamento:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = Postgres!1@2#3
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 
 mercadopago.token = ${TOKEN_MERCADO_PAGO:#{null}}
 
