--- a/inbound/pom.xml
+++ b/inbound/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>br.com.edu.fiap</groupId>
-            <artifactId>database</artifactId>
+            <artifactId>outbound</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
