--- a/inbound/src/main/resources/application.properties
+++ b/inbound/src/main/resources/application.properties
@@ -2,14 +2,14 @@ server.servlet.context-path = /api
 
 spring.liquibase.change-log=classpath:/db/changelog/changelog.sql
 
-spring.datasource.url = jdbc:postgresql://localhost:5434/postgres
+spring.datasource.url = jdbc:postgresql://database-pagamento:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = Postgres!1@2#3
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = none
 
 mercadopago.token = ${TOKEN_MERCADO_PAGO:#{null}}
-messaging.host = localhost
+messaging.host = message-broker
 messaging.username = fiap
 messaging.password = Rabbit!1@2#3
 
