chore: Adiciona configuração do JaCoCo para integração com SonarCloud

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 		<java.version>17</java.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<sonar.coverage.jacoco.xmlReportPaths>
+			${project.basedir}/test-coverage/target/site/jacoco-aggregate/jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
