--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 		<sonar.coverage.jacoco.xmlReportPaths>
 			${project.basedir}/test-coverage/target/site/jacoco-aggregate/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.organization>tallescosta</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
