--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>tallescosta</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>TallesCosta_fiap_techchallenge_pagamento_fork</sonar.projectKey>
 	</properties>
 
 	<dependencies>
